--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/lostwell-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Portfolio page made by Louel Lagasca in React" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Lostwell" />
+    <meta name="description" content="Portfolio page made by Louel Lagasca in React">
+    <meta name="author" content="Louel Lagasca">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Lostwell">
     <meta property="og:description" content="Portfolio page made by Louel Lagasca in React">
-    <meta property="og:image" content="https://lh3.google.com/u/2/d/1M-PnNPmAiL6NvYI9w4NIpMQQiUlMN-1m=w1920-h945-iv1" />
-    <meta property="og:url" content="https://lostwell.github.io" />
+    <meta name="image" property="og:image" content="https://lh3.google.com/u/2/d/1M-PnNPmAiL6NvYI9w4NIpMQQiUlMN-1m=w1920-h945-iv1">
+    <meta property="og:url" content="https://lostwell.github.io">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/lostwell-favicon.svg" />
     <!--
