--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Portfolio page made by Louel Lagasca in React">
     <meta name="image" property="og:image" content="https://lh3.google.com/u/2/d/1M-PnNPmAiL6NvYI9w4NIpMQQiUlMN-1m=w1920-h945-iv1">
     <meta property="og:image:secure_url" content="https://lh3.google.com/u/2/d/1M-PnNPmAiL6NvYI9w4NIpMQQiUlMN-1m=w1920-h945-iv1" />
-    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1920" />
     <meta property="og:image:height" content="1080" />
     <meta property="og:image:alt" content="Lostwell - Portfolio Page" />
